# alpha-chess

./: .gitignore  conftest.py  pyproject.toml  test.py  test_config.yaml  train.py  train_config.yaml
docs/: architecture.md  current_implementation_status.md  mcts.md  neural_network.md  training.md
src/: chess_env.py  config_types.py  mcts.py  move_encoder.py  nn_model.py
tests/: test_chess_env.py  test_mcts.py  test_move_encoder.py  test_nn_model.py
